cluster-setup/argocd.back/manifests/argo-ingress.yaml
apiVersion: networking.k8s.io/v1beta1 # for versions before 1.14 use extensions/v1beta1
kind: Ingress
metadata:
  name: argocd-ingress
  annotations:
#    nginx.ingress.kubernetes.io/rewrite-target: /$1
#    nginx.ingress.kubernetes.io/backend-protocol: "HTTPS"
#    cert-manager.io/cluster-issuer: letsencrypt-prod
    kubernetes.io/ingress.class: nginx
#    kubernetes.io/tls-acme: "true"
#    nginx.ingress.kubernetes.io/ssl-passthrough: "true"
spec:
  rules:
  - host: argocd.javirp.com
    http:
      paths:
      - path:
        backend:
          serviceName: argocd-server
          servicePort: http
#  tls:
#  - hosts:
#    - argocd.javirp.com
#    secretName: argocd-secret # do not change, this is provided by Argo CD
